# VoicePing-Walkie-Talkie-AndroidSDK

./: .gitignore  LICENSE  README.md  build.gradle  gradle.properties  jitpack.yml  settings.gradle
app/: build.gradle  development.keystore  proguard-rules.pro
app/src/main/: AndroidManifest.xml
app/src/main/res/drawable/: bg_rounded_outline.xml  pb_audio_amplitude_incoming.xml  pb_audio_amplitude_outgoing.xml
app/src/main/res/layout/: activity_login.xml  activity_main.xml  activity_player.xml
app/src/main/res/menu/: menu_main.xml
app/src/main/res/values/: colors.xml  dimens.xml  strings.xml  styles.xml
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
libraries/Java-WebSocket/: build.gradle
libraries/msgpack/: build.gradle
libraries/msgpack/src/main/: AndroidManifest.xml
voiceping-sdk/: build.gradle  proguard-rules.pro
voiceping-sdk/docs/: allclasses-frame.html  allclasses-noframe.html  constant-values.html  deprecated-list.html  help-doc.html  index.html  overview-frame.html  overview-summary.html  overview-tree.html  package-list  serialized-form.html
voiceping-sdk/docs/index-files/: index-1.html  index-10.html  index-11.html  index-12.html  index-13.html  index-14.html  index-15.html  index-16.html  index-17.html  index-18.html  index-19.html  index-2.html  index-20.html  index-21.html  index-3.html  index-4.html  index-5.html  index-6.html  index-7.html  index-8.html  index-9.html
voiceping-sdk/native/: .gitignore  CMakeLists.txt  README.md  build.sh  opus_jni.c
voiceping-sdk/src/main/: AndroidManifest.xml
(+336 files in other folders)
